# SP25-690-Ananthavaram

./: .gitignore  README.md  baseline_chatbot.py  changelog.md  compare_chatbots.py  comparison_results.csv  dashboard.py  emotion_chatbot.py  emotion_nn.py  evaluation_prompts.json  model_comparison_summary.csv  model_metric_comparison.csv  pyproject.toml
results_emotion_model/checkpoint-1/: trainer_state.json
saved_emotion_model/: config.json
